# kratos-desktop-rust

./: README.md
rust_backend/: .gitignore  diesel.toml
rust_backend/migrations/2025-02-09-054615_create_users/: up.sql
rust_backend/migrations/2025-02-09-054616_publishers/: up.sql
rust_backend/migrations/2025-02-09-054617_games/: up.sql
rust_backend/migrations/2025-02-09-054618_platforms/: down.sql  up.sql
rust_backend/migrations/2025-02-09-054810_categories/: up.sql
rust_backend/migrations/2025-02-09-055055_cartItems/: down.sql  up.sql
rust_backend/migrations/2025-02-09-055318_gamecategories/: down.sql  up.sql
rust_backend/migrations/2025-02-09-055338_gameplatforms/: down.sql  up.sql
rust_backend/migrations/2025-02-09-055416_orders/: up.sql
rust_backend/migrations/2025-02-09-055417_orderitems/: down.sql  up.sql
rust_backend/migrations/2025-02-09-055548_reviews/: up.sql
rust_backend/migrations/2025-02-09-055605_usergames/: down.sql  up.sql
rust_backend/migrations/2025-02-09-055623_wishlist/: up.sql
rust_backend/src/: Cargo.toml  db.rs  main.rs  models.rs  schema.rs  services.rs
rust_backend/src/routes/: create_user.rs  hello_user.rs  home.rs  mod.rs
