[package]
name = "kratos-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "8.1.1"
cookie = "0.15.0"

[[bin]]
name = "kratos"
path = "main.rs"